# esp32s3_smart_alarm_clock

./: .clangd  .cursorrules  .gitignore  BUILD_COLOR_README.md  CMakeLists.txt  build_aliases.sh  colorize_build.sh  gituse.md  partitions_webserver.csv  sdkconfig  sdkconfig.old
audio/: record.pcm
components/ap_wifi/: CMakeLists.txt  wifi_manager.c  ws_server.c
components/audio_driver/: CMakeLists.txt  nocodec_audio.c  nocodec_audio.h
components/board/include/: board_config.h
components/bsp/: CMakeLists.txt  ft6336u_driver.c  ft6336u_driver.h  xl9555.c
main/: CMakeLists.txt  aida64.c  aida64.h  idf_component.yml  lv_port.c  main.c
main/ui/: weather.c  weather.h
main/ui/custom/: custom.c  custom.h
